# Hawk-VLDBJ

./: README.md
source/: CMakeLists.txt  README.md  config.h.in
source/CMake/: FindBAM.cmake  FindCPUISAXs.cmake  FindLLVM.cmake  FindLibReadline.cmake  FindOcelot.cmake  FindOpenCL.cmake  FindPERSEUS.cmake  FindRapidJSON.cmake  FindThrust.cmake  Findclang.cmake  Findsparsehash.cmake  HyPEConfig.cmake
source/benchmarks/: README.md  aggregation_benchmark.cpp  generic_selection_benchmark.cpp  gpu_memory_allocator.cu  join_benchmark.cpp  selection_benchmark.cpp  send_error_email.sh  send_success_mail.sh  sort_benchmark.cpp
source/benchmarks/experiments/: run_experiments.sh
source/benchmarks/experiments/eval/: create_diagrams.sh  eval.sh  eval_usecase_summary.sh
source/benchmarks/exploration/: default.coga  execute_feature_wise.sh  execute_feature_wise_per_query.sh  execute_full_exploration.sh  report.tpl.tex.part2  report.tpl.tex.part3
source/benchmarks/exploration/analysis/: 1_Overview.ipynb  2_ExampleQuery.ipynb  3_Evaluation.ipynb  create_feature_wise_table.py  exploration.py  feature_wise_log_to_csv.sh  prepare.py  report.tpl.tex.part1  report.tpl.tex.part2  report.tpl.tex.part3  run.sh
source/benchmarks/exploration/query_benchmark/: generate_variants.sh  run_experiments.sh  startup.coga.in
source/benchmarks/exploration/ssb_queries/: grouped_aggregation_query_1.coga  grouped_aggregation_query_2_many_groups.coga  projection-query-1-medium-selectivity.coga  projection-query-2-high-selectivity.coga  query_ssb21.coga  query_ssb31.coga  simple-aggregation-query-1-medium-selectivity.coga
source/benchmarks/exploration/ssb_queries_feature_wise_per_query/: query_ssb11.coga  query_ssb12.coga  query_ssb13.coga  query_ssb32.coga  query_ssb33.coga  query_ssb34.coga  query_ssb41.coga  query_ssb42.coga  query_ssb43.coga
source/benchmarks/exploration/tpch_queries/: tpch_query5.coga  tpch_query6.coga  tpch_query7.coga  tpch_query7.json
source/benchmarks/exploration/tpch_queries_feature_wise_per_query/: tpch_query1.coga  tpch_query19.coga  tpch_query19.json  tpch_query4.coga  tpch_query6.json  tpch_query7.coga
source/benchmarks/falcon_query_experiments/: collect_results.sh  collect_results_compilation_time.sh  compute_average.awk  compute_average.py  detect_devices.sh  generate_variants.sh  plot_variant_measurements.sh  run_experiments.sh  show_results.sh  startup.coga.in
source/benchmarks/falcon_query_experiments/ssb_queries/: query_ssb11.coga  query_ssb12.coga  query_ssb13.coga  (+9 more)
source/benchmarks/falcon_variant_experiments/: detect_devices.sh  generate_latex_plot.sh  generate_variants.sh  high_selective_projection_queries.coga  plot_variant_measurements.sh  run_experiments.sh  startup.coga.in
source/benchmarks/memory_constrained_query_optimization/: PATH_TO_COGADB_DATABASES.example  PATH_TO_COGADB_EXECUTABLE.example  README  build_csv_result_table.sh  build_csv_result_table_query_chopping.sh  build_csv_result_table_query_chopping_cpu_only.sh  build_summary.sh  compute_average.awk  generate_coga_script_file.sh  generate_coga_script_file_query_chopping.sh  generate_hardware_specification_file.sh  generate_hype_configuration_file.sh  hardware_specification.conf.example  hype.conf.example  plot_diagrams.sh  run_experiments_aborted_gpu_operators.sh  run_experiments_cpu_only_query_chopping.sh  run_experiments_query_chopping.sh  run_experiments_selection_benchmark.sh  run_sigmod_experiments.sh  run_tests.sh
source/benchmarks/performance_star_schema_benchmark/: collect_measured_variables_from_logfile.sh  create_cleaned_evaluation_results.sh  create_csv_files_for_workload_plots_sigmod2016.sh  generate_benchmarkfile.sh  generate_coga_script_file.sh  generate_csv_for_cogadb_parallel_benchmarkresult.sh  generate_experiment_config_files.sh  generate_hardware_specification_file.sh  generate_hype_configuration_file.sh  measure_GPU_pro_and_contra_for_intro.sh  measure_gpu_statistics.sh  run_all.sh  run_all_queries_seperately.sh  run_all_sigmod2016.sh  run_all_vldb2015.sh  run_benchmark.sh  run_optimizer_experiments.sh  run_sigmod_experiments.sh
source/benchmarks/scripts/: generate_benchmarkfile.sh  generate_csv_for_cogadb_benchmarkresult.sh  load_tpch_database.coga  test.coga  unittest_star_schema_benchmark.coga
source/doc/: CMakeLists.txt  Doxyfile.in  Doxyfile.print.in  layout.xml
source/doc/additional_documentation/: documentation.hpp  latex_cover.tex  literature.bib  sam_exporter_showcase
source/doc/cogadb_user_guide/: cogadb_user_guide.md  create-html.sh  create-pdf.sh
source/lib/: CMakeLists.txt
source/lib/hype/: CMakeLists.txt  config.h.in  main.c  main.cc  setup_ubuntu.sh
source/lib/perseus/: .gitignore  CMakeLists.txt
source/test/: CMakeLists.txt
source/test/experiments/: hash_table_performance.cpp  load_query_from_json.cpp  opencl_kernel_launch.cpp  select_kernel.cl  vector_at_a_time_test.cpp
source/test/integration_tests/: code_generation_k_means.cpp  generic_regression_tests.cpp  generic_regression_tests.hpp  generic_ssb_tests.cpp  generic_ssb_tests.hpp  generic_tpch_tests.cpp  generic_tpch_tests.hpp  json_query_compiler_interface.cpp  opencl_query_compiler_ssb_tests.hpp  opencl_query_compiler_ssb_tests_aggregation.cpp  opencl_query_compiler_ssb_tests_groupagg.cpp  opencl_query_compiler_ssb_tests_projection.cpp  query_compiler_ssb_tests.cpp  standard_query_tests.cpp
source/test/parser/: CMakeLists.txt  json_parser.cpp  json_validator.cpp
source/test/testdata/: test_query_plan_map_udf.json
source/tools/: CMakeLists.txt
source/tools/client/: cogadb_createdb.sh  cogadb_deletedb.sh  cogadbclient.sh
source/tools/cogadbd/: CMakeLists.txt  main.cpp
source/tools/web_ui/: README  available_queries.csv  change_parameters.php  create_genome_view_data.php  exec_parameterization.php  exec_paramterization.php  exec_query.php  genome_analysis.php  get_paramterization.php  index.php  query.php  reset.php
source/utility_scripts/: create_installer.sh  create_release.sh  format_source_code.sh  install_cogadb_dependencies.sh  setup_reference_databases.sh
(+1124 files in other folders)
