add_subdirectory(backends)
add_subdirectory(compression)
add_subdirectory(core)
add_subdirectory(hardware_optimizations)
add_subdirectory(lookup_table)
add_subdirectory(optimizer)
add_subdirectory(parser)
add_subdirectory(persistence)
add_subdirectory(query_compilation)
add_subdirectory(query_processing)
add_subdirectory(sql)
add_subdirectory(statistics)
add_subdirectory(unittests)
add_subdirectory(util)
